--- a/index.html
+++ b/index.html
@@ -53,6 +53,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link rel="stylesheet" href="index.css">
   <title>Tech Website</title>
   <style>
     /* CSS styles */
