--- a/index.html
+++ b/index.html
@@ -116,7 +116,7 @@
       </ul>
     </div>
     <div id="content">
-      <h2>What are we?</h2>
+      <h2 style="color:grey;">What are we?</h2>
       <p>Minerva is the Tech Forum of IGDTUW, with an aim to be the one-stop destination for guidance and motivation for our students, from our remarkable seniors and alumni. While our work at Minerva can never be complete, our attempt to pass on words of wisdom from our seniors will be tireless.</p>
     </div>
   </div>
